# todoist-habitica-sync

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .pydocstyle  .pylintrc  .testrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-test.txt  requirements.txt  test.sh
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: auto-approve-for-owners.yaml  run-command.yml
.run/: All tests.run.xml  Run app.run.xml
.sync_cache/: sync_cache.sqlite
documentation/: should task score points.xml  task state flow.md  task state flow.xml
src/: .pylintrc  config.py  delay.py  habitica_api.py  main.py  tasks_cache.py  todoist_api.py
src/models/: generic_task.py  habitica.py  habitica_task.py  todoist.py  todoist_task.py
tasks/: __init__.py  docker_build.py  format.py  lint.py  test.py  typecheck.py  upload.py  utils.py  verify_all.py
tests/: .pylintrc  conftest.py
tests/integration/: mock_test.py
tests/unit/: test_changelog.py  test_config.py  test_main.py  test_mock.py
